Updates to instructions

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <span style="padding:10px;">
       To decode the message:
     <ol>
-      <li>Starting with the first three symbols, click the matching set of three symbols in the grid on the right</li>
+      <li>Starting with the first three symbols, click the matching three symbols in the grid on the right</li>
       <li>Click the inkpad</li>
       <li>Click in the box under the first three symbols in the message</li>
       <li>Repeat until message is decoded</li>
